[tool.poetry]
name = "genie-gpt"
version = "0.1.0"
description = ""
authors = ["Turing machine <igor.ivanter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "13.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
